--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,12 +1,14 @@
 <div *ngIf="hero">
-    <h2>{{ hero.name | uppercase }} Details</h2>
-  
-    <div><span>id: </span>{{ hero.id }}</div>
-    <div>
-      <label for=""
-        >name:
-        <input [(ngModel)]="hero.name" type="text" placeholder="name" />
-      </label>
-    </div>
+  <h2>{{ hero.name | uppercase }} Details</h2>
+
+  <div><span>id: </span>{{ hero.id }}</div>
+  <div>
+    <label for=""
+      >name:
+      <input [(ngModel)]="hero.name" type="text" placeholder="name" />
+    </label>
   </div>
-  <button (click)="goBack()">go back</button>
+</div>
+<button (click)="goBack()">go back</button>
+
+<button (click)="save()">save</button>
